# Weather_CLI

./: Cargo.toml  README.md
weather_cli/: Cargo.toml
weather_cli/src/: main.rs
