[package]
name = "weather_cli"
version = "0.1.0"
authors = ["ajg7 <ajgebara@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features=["json"]}
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"
tokio = { version = "1.2.0", features=["full"]}